# brainstorming

./: .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/api/v1/: db.py  main.py
backend/api/v1/models/: lgtm.py  post.py  user.py
backend/api/v1/routers/: post.py  user.py
backend/api/v1/schemas/: post.py  user.py
backend/brainstorming/api/: brainstorming.py  postit.py  sheet.py  user.py
backend/brainstorming/cruds/: brainstorming.py  postit.py  sheet.py  user.py
backend/brainstorming/models/: brainstorming.py  postit.py  sheet.py  users.py
backend/brainstorming/schemas/: postit.py  sheet.py  user.py
backend/db/: alembic.ini
backend/db/migration/: env.py
backend/db/migration/versions/: 879813fc7126_first_migration.py
backend/migration/: env.py
db/conf.d/: mysql.conf
