[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = {extras = ["standart"], version = "^0.17.6"}
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
mysql-connector-python = "^8.0.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
